feat(gradle-plugin): enhance Spark SQL prep and extension runtime management
- Updated Gradle plugin to support Spark SQL preparation inside Gradle JVM with enhanced logging and module access configuration.
- Added support for Iceberg Spark extensions and shaded runtime artifacts for improved dependency isolation.
- Introduced extension resource directories for better resource management.
- Enhanced extension runtime classpath configuration with added dependencies for AWS SDK, Iceberg AWS bundle, and servlet API.
- Updated documentation to reflect new plugin configurations, logging options, and resource handling.