@@ -42,7 +42,9 @@ class SparkSqlPreparationExtension(
                 .config("spark.ui.enabled", "false")
                 .config(
                     "spark.executor.extraJavaOptions",
-                    "--add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED",
+                    "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED " +
+                        "--add-opens=java.base/java.nio=ALL-UNNAMED " +
+                        "--add-opens=java.base/java.net=ALL-UNNAMED",
                 )
             if (useKitEndpoints) {
                 configureFromKit(builder, context)
